--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -3,3 +3,11 @@
   color: #ffffff;
   padding: 10px 15px;
 }
+
+.header a {
+  font-family: "Montserrat", "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 46px;
+}
