--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,9 +1,7 @@
-.header__wrapper {
+.footer {
   width: 320px;
   margin: 0 auto;
   display: flex;
-  position: relative;
-  min-height: 60px;
 
   @media (min-width: $tablet-width) {
     width: 768px;
@@ -13,14 +11,7 @@
 
   @media (min-width: $desktop-width) {
     width: 1440px;
-    padding-left: 110px;
-    padding-right: 110px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
-
-.header__logo {
-  margin-right: auto;
-}
-
-
-
