--- a/source/sass/blocks/section.scss
+++ b/source/sass/blocks/section.scss
@@ -1,9 +1,9 @@
-.header__wrapper {
+.section {
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
   width: 320px;
   margin: 0 auto;
-  display: flex;
-  position: relative;
-  min-height: 60px;
 
   @media (min-width: $tablet-width) {
     width: 768px;
@@ -13,14 +13,7 @@
 
   @media (min-width: $desktop-width) {
     width: 1440px;
-    padding-left: 110px;
-    padding-right: 110px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
-
-.header__logo {
-  margin-right: auto;
-}
-
-
-
