--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,15 @@
 @import "global/variables";
 @import "global/global";
 @import "global/fonts";
+@import "global/visually-hidden";
 
 /* BLOCKS */
 @import "blocks/header";
+@import "blocks/footer";
+@import "blocks/hero-slider";
+@import "blocks/page__body";
+@import "blocks/section";
+@import "blocks/main-nav";
+@import "blocks/user-list";
+@import "blocks/site-list";
+
