--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "global/visually-hidden";
 
 /* BLOCKS */
+@import "blocks/button";
 @import "blocks/header";
 @import "blocks/footer";
 @import "blocks/hero-slider";
@@ -13,4 +14,6 @@
 @import "blocks/main-nav";
 @import "blocks/user-list";
 @import "blocks/site-list";
+@import "blocks/slider-pagination";
+
 
