--- a/source/sass/blocks/hero-slider.scss
+++ b/source/sass/blocks/hero-slider.scss
@@ -10,6 +10,7 @@
 }
 
 .hero-slider__title {
+  font-family: "Montserrat", "Arial", sans-serif;
   font-size: 36px;
   line-height: 48px;
   color: #333333;
@@ -23,6 +24,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  order: 1;
 }
 
 .hero-slider__description {
@@ -45,7 +47,7 @@
 }
 
 .hero-slider__old-price {
-  font-family: "Montserrat", "Arial", sans-serif;;
+  font-family: "Montserrat", "Arial", sans-serif;
   font-size: 20px;
   line-height: 32px;
   font-weight: 400;
