--- a/source/sass/blocks/section.scss
+++ b/source/sass/blocks/section.scss
@@ -5,15 +5,15 @@
   width: 320px;
   margin: 0 auto;
 
-  @media (min-width: $tablet-width) {
-    width: 768px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+  // @media (min-width: $tablet-width) {
+  //   width: 768px;
+  //   padding-left: 20px;
+  //   padding-right: 20px;
+  // }
 
-  @media (min-width: $desktop-width) {
-    width: 1440px;
-    padding-left: 40px;
-    padding-right: 40px;
-  }
+  // @media (min-width: $desktop-width) {
+  //   width: 1440px;
+  //   padding-left: 40px;
+  //   padding-right: 40px;
+  // }
 }
