Стилизует карточку товара

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 /* BLOCKS */
 @import "blocks/bage";
 @import "blocks/button";
+@import "blocks/card";
 @import "blocks/catalog";
 @import "blocks/features";
 @import "blocks/form";
