--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,7 @@
 @import "blocks/section";
 @import "blocks/main-nav";
 @import "blocks/user-list";
+@import "blocks/pagination";
 @import "blocks/range";
 @import "blocks/select";
 @import "blocks/site-list";
