--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,15 +3,26 @@
   margin: 0 auto;
   display: flex;
 
-  @media (min-width: $tablet-width) {
-    width: 768px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+  // @media (min-width: $tablet-width) {
+  //   width: 768px;
+  //   padding-left: 20px;
+  //   padding-right: 20px;
+  // }
 
-  @media (min-width: $desktop-width) {
-    width: 1440px;
-    padding-left: 40px;
-    padding-right: 40px;
-  }
+  // @media (min-width: $desktop-width) {
+  //   width: 1440px;
+  //   padding-left: 40px;
+  //   padding-right: 40px;
+  // }
+}
+
+.footer__social {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+}
+
+.footer__copyright {
+  padding-top: 20px;
+  padding-bottom: 30px;
 }
