--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,20 +5,23 @@
   position: relative;
   min-height: 60px;
 
-  @media (min-width: $tablet-width) {
-    width: 768px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+  // @media (min-width: $tablet-width) {
+  //   width: 768px;
+  //   padding-left: 20px;
+  //   padding-right: 20px;
+  // }
 
-  @media (min-width: $desktop-width) {
-    width: 1440px;
-    padding-left: 110px;
-    padding-right: 110px;
-  }
+  // @media (min-width: $desktop-width) {
+  //   width: 1440px;
+  //   padding-left: 110px;
+  //   padding-right: 110px;
+  // }
 }
 
 .header__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-right: auto;
 }
 
