--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,12 +1,6 @@
 .main-nav {
   position: relative;
   display: flex;
-  flex-direction: column;
-}
-
-.main-nav__wrapper {
-  display: flex;
-  // position: relative;
 }
 
 .main-nav__toggle {
@@ -22,6 +16,10 @@
   background-color: #ffffff;
 }
 
+.main-nav__user-list {
+  display: flex;
+}
+
 .main-nav__link {
   display: flex;
   justify-content: center;
@@ -31,3 +29,71 @@
   min-height: 60px;
   cursor: pointer;
 }
+
+// .main-nav--closed .main-nav__toggle::before {
+//   content: "";
+//   position: absolute;
+//   top: 24px;
+//   right: 20px;
+//   width: 24px;
+//   height: 16px;
+//   background-image: url("../img/menu-toggle.svg");
+//   background-repeat: no-repeat;
+//   background-size: 24px 16px;
+//   background-position: center;
+// }
+
+.main-nav--closed .site-list {
+  display: none;
+
+  // @media (min-width: @tablet-width) {
+  //   display: flex;
+  // }
+}
+
+.main-nav--opened .main-nav__toggle {
+  &::before,
+  &::after {
+    display: block;
+    content: "";
+    position: absolute;
+    top: 32px;
+    right: 20px;
+    width: 24px;
+    height: 2px;
+    background-color: #000000;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+.main-nav--opened .main-nav__list {
+  position: absolute;
+  display: block;
+  right: 0;
+  z-index: 3;
+  min-width: 320px;
+  width: 100%;
+  bottom: 0;
+  transform: translateY(100%);
+
+  // @media (min-width: @tablet-width) {
+  //   position: static;
+  // }
+}
+
+// .main-nav--nojs .main-nav__toggle {
+//   display: none;
+// }
+
+// .main-nav--nojs .main-nav__list {
+//   position: static;
+//   min-height: 0;
+// }
+
