--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -6,5 +6,28 @@
   min-width: 320px;
   width: 100%;
   text-align: center;
+  background-color: #ffffff;
+}
 
+.site-list__item {
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid #F0EBFF;
+
+  &:first-child {
+    border-top: 1px solid #F0EBFF;
+  }
+}
+
+.site-list__link {
+  color: #333333;
+text-align: center;
+font-family: "Montserrat", "Arial", sans-serif;
+font-size: 12px;
+font-style: normal;
+font-weight: 500;
+line-height: 16px; /* 133.333% */
+letter-spacing: 0.24px;
+text-transform: uppercase;
+padding: 20px 70px;
 }
