--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,10 +9,13 @@
 @import "blocks/button";
 @import "blocks/card";
 @import "blocks/catalog";
+@import "blocks/copyright";
 @import "blocks/features";
 @import "blocks/form";
 @import "blocks/header";
 @import "blocks/footer";
+@import "blocks/footer-nav";
+@import "blocks/map";
 @import "blocks/hero-slider";
 @import "blocks/page__body";
 @import "blocks/section";
@@ -23,6 +26,7 @@
 @import "blocks/select";
 @import "blocks/site-list";
 @import "blocks/slider-pagination";
+@import "blocks/social";
 @import "blocks/wrapper";
 
 
