--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,7 @@
 @import "blocks/header";
 @import "blocks/footer";
 @import "blocks/footer-nav";
+@import "blocks/logo";
 @import "blocks/map";
 @import "blocks/hero-slider";
 @import "blocks/page__body";
