--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,3 +1,8 @@
+.features {
+  padding-top: 50px;
+  padding-bottom: 28px;
+}
+
 .features__title {
   color: #333333;
   text-align: center;
@@ -7,6 +12,7 @@
   font-weight: 700;
   line-height: 36px;
   max-width: 280px;
+  margin-bottom: 36px;
 }
 
 .features__description-title {
@@ -18,6 +24,8 @@
   font-weight: 700;
   line-height: 32px;
   max-width: 280px;
+  margin: 0;
+  margin-bottom: 4px;
 }
 
 .features__description {
@@ -28,4 +36,32 @@ font-size: 14px;
 font-style: normal;
 font-weight: 400;
 line-height: 20px;
+margin: 0;
+margin-bottom: 32px;
+}
+
+.features__image {
+  display: block;
+  margin: 0 auto;
+  width: 52px;
+  height: 56px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 10px;
+
+  &--speed {
+    background-image: url("/images/speed.svg");
+  }
+
+  &--comfort {
+    background-image: url("/images/comfort.svg");
+  }
+
+  &--energy {
+    background-image: url("/images/energy.svg");
+  }
+
+  &--eco {
+    background-image: url("/images/eco.svg");
+  }
 }
