--- a/source/sass/global/nouislider.scss
+++ b/source/sass/global/nouislider.scss
@@ -83,13 +83,13 @@
  /* Slider size and handle placement;
   */
  .noUi-horizontal {
-   height: 18px;
+   height: 2px;
  }
  .noUi-horizontal .noUi-handle {
-   width: 34px;
-   height: 28px;
-   right: -17px;
-   top: -6px;
+   width: 24px;
+   height: 24px;
+   right: -22px;
+   top: -11px;
  }
  .noUi-vertical {
    width: 18px;
@@ -108,10 +108,8 @@
   * Giving the connect element a border radius causes issues with using transform: scale
   */
  .noUi-target {
-   background: #FAFAFA;
-   border-radius: 4px;
-   border: 1px solid #D3D3D3;
-   box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB;
+   background: rgba(226, 226, 226, 1);
+   border: none;
  }
  .noUi-connects {
    border-radius: 3px;
@@ -128,41 +126,16 @@
    cursor: ns-resize;
  }
  .noUi-handle {
-   border: 1px solid #D9D9D9;
-   border-radius: 3px;
+   border: 2px solid rgba(144, 112, 236, 1);
+   border-radius: 50%;
    background: #FFF;
-   cursor: default;
-   box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
+   cursor: pointer;
+  //  box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
  }
  .noUi-active {
    box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #DDD, 0 3px 6px -3px #BBB;
  }
- /* Handle stripes;
-  */
- .noUi-handle:before,
- .noUi-handle:after {
-   content: "";
-   display: block;
-   position: absolute;
-   height: 14px;
-   width: 1px;
-   background: #E8E7E6;
-   left: 14px;
-   top: 6px;
- }
- .noUi-handle:after {
-   left: 17px;
- }
- .noUi-vertical .noUi-handle:before,
- .noUi-vertical .noUi-handle:after {
-   width: 14px;
-   height: 1px;
-   left: 6px;
-   top: 14px;
- }
- .noUi-vertical .noUi-handle:after {
-   top: 17px;
- }
+
  /* Disabled state;
   */
  [disabled] .noUi-connect {
@@ -302,4 +275,9 @@
    transform: translate(0, -18px);
    top: auto;
    right: 28px;
+ }
+
+
+ .noUi-horizontal .noUi-handle-upper {
+  right: 0;
  }
