--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 @import "global/variables";
 @import "global/global";
 @import "global/fonts";
+@import "global/nouislider.scss";
 @import "global/visually-hidden";
 
 /* BLOCKS */
