--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -14,3 +14,15 @@
 .copyright__text {
   margin: 0;
 }
+
+.copyright__icon {
+  display: flex;
+  width: 12px;
+  height: 16px;
+  align-items: center;
+  justify-content: center;
+  background-image: url("/images/icons/stack.svg#copyright");
+  background-repeat: no-repeat;
+  background-size: 12px 16px;
+  background-position: center;
+}
