--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -45,10 +45,33 @@
 }
 
 .footer-nav__contacts {
+  position: relative;
+  margin-left: 19px;
+  display: block;
   color: #333333;
   font-family: "Montserrat", "Arial", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px; /* 142.857% */
+  line-height: 20px;
+}
+
+.footer-nav__contacts::before {
+  position: absolute;
+  content: "";
+  width: 13px;
+  height: 16px;
+  top: 2px;
+  left: -19px;
+  background-repeat: no-repeat;
+  background-size: 13px 16px;
+  background-position: center;
+}
+
+.footer-nav__contacts--adress::before {
+  background-image: url("/images/icons/stack.svg#address");
+}
+
+.footer-nav__contacts--tel::before {
+  background-image: url("/images/icons/stack.svg#phone");
 }
