Добавляет стрелочку селекту

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -20,6 +20,10 @@
   margin-bottom: 20px;
 }
 
+.form__range {
+  margin-bottom: 20px;
+}
+
 .form__button-wrapper {
   display: flex;
   flex-direction: column;
