--- a/source/sass/blocks/pagination.scss
+++ b/source/sass/blocks/pagination.scss
@@ -9,6 +9,14 @@
   background-color: #ffffff;
   width: 40px;
   height: 40px;
+  background-image: url("/images/icons/stack.svg#pagination");
+  background-size: 10px 10px;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  &--next {
+    transform: scale(-1, 1);
+  }
 }
 
 .pagination__list {
