--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,6 +17,7 @@
 @import "blocks/footer";
 @import "blocks/footer-nav";
 @import "blocks/logo";
+@import "blocks/main-container";
 @import "blocks/map";
 @import "blocks/hero-slider";
 @import "blocks/page__body";
