--- a/source/sass/blocks/section.scss
+++ b/source/sass/blocks/section.scss
@@ -5,11 +5,9 @@
   width: 320px;
   margin: 0 auto;
 
-  // @media (min-width: $tablet-width) {
-  //   width: 768px;
-  //   padding-left: 20px;
-  //   padding-right: 20px;
-  // }
+  @media (min-width: $tablet-width) {
+    width: 768px;
+  }
 
   // @media (min-width: $desktop-width) {
   //   width: 1440px;
