--- a/source/sass/blocks/slider-pagination.scss
+++ b/source/sass/blocks/slider-pagination.scss
@@ -1,5 +1,10 @@
 .slider-pagination {
+  position: relative;
   display: flex;
   flex-direction: column;
   transition: transform 0.5s ease-in-out;
+
+  // @media (min-width: $tablet-width) {
+  //   height: 640px;
+  // }
 }
