--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,9 +1,22 @@
 .features {
   padding-top: 50px;
   padding-bottom: 28px;
+  background-color: #ffffff;
 
   @media (min-width: $tablet-width) {
     padding-top: 60px;
+  }
+}
+
+.features__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.features__bage {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 4px;
   }
 }
 
@@ -16,7 +29,36 @@
   font-weight: 700;
   line-height: 36px;
   max-width: 280px;
+  margin: 0;
   margin-bottom: 36px;
+
+  @media (min-width: $tablet-width) {
+    text-align: center;
+    font-size: 42px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 64px;
+    max-width: 728px;
+    margin-bottom: 60px;
+  }
+}
+
+.features__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 30px;
+  row-gap: 50px;
+}
+
+.features__item {
+  @media(min-width: $tablet-width) {
+    padding-left: 72px;
+    position: relative;
+    // display: grid;
+    // grid-template-columns: 52px 1fr;
+    // grid-template-rows: 1fr 1fr;
+    // column-gap: 20px;
+  }
 }
 
 .features__description-title {
@@ -30,6 +72,13 @@
   max-width: 280px;
   margin: 0;
   margin-bottom: 4px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 24px;
+    line-height: 36px;
+    text-align: start;
+    margin-bottom: 10px;
+  }
 }
 
 .features__description {
@@ -42,6 +91,15 @@ font-weight: 400;
 line-height: 20px;
 margin: 0;
 margin-bottom: 32px;
+
+  @media(min-width: $tablet-width) {
+    margin-bottom: 0;
+    grid-column: 2 / 3;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: start;
+    margin: 0;
+  }
 }
 
 .features__image {
@@ -68,4 +126,13 @@ margin-bottom: 32px;
   &--eco {
     background-image: url("/images/eco.svg");
   }
-}
+
+  @media (min-width:$tablet-width) {
+    position: absolute;
+    left: 0;
+    top: 0;
+    // grid-column: 1 / 2;
+    // grid-row: 1 / 3;
+    // margin: 0;
+  }
+ }
