--- a/source/sass/blocks/hero-slider.scss
+++ b/source/sass/blocks/hero-slider.scss
@@ -7,8 +7,7 @@
   min-width: 320px;
   width: 100%;
   background-color: #F3EBE1;
-  padding-top: 20px;
-  padding-bottom: 60px;
+  padding: 0;
   box-sizing: border-box;
   // overflow: hidden;
 
@@ -77,7 +76,7 @@
   margin-bottom: 4px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 60px;
+    margin-top: 0;
   }
 }
 
