--- a/source/sass/blocks/slider-pagination.scss
+++ b/source/sass/blocks/slider-pagination.scss
@@ -3,8 +3,10 @@
   display: flex;
   flex-direction: column;
   transition: transform 0.5s ease-in-out;
+  padding-top: 20px;
+  padding-bottom: 60px;
 
-  // @media (min-width: $tablet-width) {
-  //   height: 640px;
-  // }
+  @media (min-width: $tablet-width) {
+    padding-top: 60px;
+  }
 }
