--- a/source/sass/blocks/wrapper.scss
+++ b/source/sass/blocks/wrapper.scss
@@ -4,4 +4,8 @@
     padding-right: 20px;
     width: 320px;
     margin: 0 auto;
+
+    @media (min-width: $tablet-width) {
+        width: 768px;
+    }
 }
