--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -5,6 +5,7 @@
 
   @media (min-width: $tablet-width) {
     padding-top: 60px;
+    padding-bottom: 100px;
   }
 }
 
@@ -54,10 +55,6 @@
   @media(min-width: $tablet-width) {
     padding-left: 72px;
     position: relative;
-    // display: grid;
-    // grid-template-columns: 52px 1fr;
-    // grid-template-rows: 1fr 1fr;
-    // column-gap: 20px;
   }
 }
 
@@ -131,8 +128,5 @@ margin-bottom: 32px;
     position: absolute;
     left: 0;
     top: 0;
-    // grid-column: 1 / 2;
-    // grid-row: 1 / 3;
-    // margin: 0;
   }
  }
