--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,3 +1,10 @@
+.form__wrapper {
+  @media(min-width: $tablet-width) {
+      display: flex;
+      gap: 30px;
+  }
+}
+
 .form__group {
   border: none;
   padding: 0;
@@ -18,6 +25,10 @@
   line-height: 24px;
   padding: 0;
   margin-bottom: 20px;
+
+  // @media(min-width: $tablet-width) {
+  //   margin-bottom: 30px;
+  // }
 }
 
 .form__range {
@@ -28,6 +39,12 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 24px;
+
+  @media(min-width: $tablet-width) {
+    width: 277px;
+    flex-direction: row;
+    margin: 0 auto;
+  }
 }
 
 .form__button {
@@ -36,6 +53,12 @@
   &--reset {
     color: #7859CF;
     background-color: #ffffff;
+  }
+}
+
+.form__button--submit {
+  @media(min-width: $tablet-width) {
+    margin-right: 20px;
   }
 }
 
