--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -16,6 +16,10 @@
   display: flex;
   justify-content: center;
   margin-bottom: 24px;
+
+  @media(min-width: $tablet-width) {
+    margin-bottom: 30px;
+  }
 }
 
 .card__title {
@@ -25,6 +29,13 @@
   font-style: normal;
   font-weight: 700;
   line-height: 32px;
+  margin-bottom: 4px;
+
+  @media(min-width: $tablet-width) {
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 10px;
+  }
 }
 
 .card__description {
@@ -34,6 +45,13 @@
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
+  margin: 0;
+  margin-bottom: 16px;
+
+  @media(min-width: $tablet-width) {
+    margin-bottom: 20px;
+  }
+
 }
 
 .card__wrapper {
@@ -55,4 +73,9 @@
 .card__order {
   font-size: 14px;
   line-height: 20px;
+  padding-left: 46px;
+  background-image: url("/images/icons/stack.svg#button-order");
+  background-size: 20px 16px;
+  background-repeat: no-repeat;
+  background-position: left 20px center;
 }
