--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,13 +1,15 @@
-.footer {
+.footer__wrapper {
   width: 320px;
   margin: 0 auto;
   display: flex;
+  flex-direction: column;
 
-  // @media (min-width: $tablet-width) {
-  //   width: 768px;
-  //   padding-left: 20px;
-  //   padding-right: 20px;
-  // }
+  @media (min-width: $tablet-width) {
+    width: 768px;
+    padding-top: 42px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 
   // @media (min-width: $desktop-width) {
   //   width: 1440px;
@@ -20,9 +22,16 @@
   display: flex;
   align-items: center;
   padding: 20px;
+
 }
 
 .footer__copyright {
   padding-top: 20px;
   padding-bottom: 30px;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 40px;
+    padding-top: 30px;
+    margin: 0 auto;
+  }
 }
