--- a/source/sass/blocks/hero-slider.scss
+++ b/source/sass/blocks/hero-slider.scss
@@ -1,21 +1,20 @@
 .hero-slider {
-  // position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   min-width: 320px;
   width: 100%;
   background-color: #F3EBE1;
   padding: 0;
   box-sizing: border-box;
-  // overflow: hidden;
 
   @media (min-width: $tablet-width) {
     justify-content: flex-start;
     padding: 0;
-    height: 640px;
+    min-height: 640px;
     margin-bottom: 188px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 714px;
+    margin-bottom: 100px;
   }
 
 }
@@ -31,8 +30,33 @@
 
   @media (min-width: $tablet-width) {
     width: 768px;
-    height: 640px;
+    min-height: 640px;
     }
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
+    min-height: 714px;
+  }
+}
+
+.hero-slider__info {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.5s ease-in-out;
+  padding-top: 20px;
+  padding-bottom: 60px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 30px;
+    flex-direction: row;
+    align-items: center;
+    padding-bottom: 84px;
+  }
 }
 
 .hero-slider__title {
@@ -52,6 +76,10 @@
     width: 608px;
     margin-bottom: 16px;
   }
+
+  @media (min-width: $desktop-width) {
+    text-align: start;
+  }
 }
 
 .hero-slider__image {
@@ -69,6 +97,15 @@
     left: 50%;
     transform: translateX(-50%);
   }
+
+  @media (min-width: $desktop-width) {
+    position: static;
+    width: 600px;
+    height: 600px;
+    transform: inherit;
+    margin-left: 105px;
+    margin-right: 30px;
+  }
 }
 
 .hero-slider__bage {
@@ -77,6 +114,10 @@
 
   @media (min-width: $tablet-width) {
     margin-top: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: start;
   }
 }
 
@@ -96,6 +137,13 @@
     line-height: 32px;
     width: 608px;
   }
+
+  @media (min-width: $desktop-width) {
+    text-align: start;
+    margin: 0;
+    margin-right: auto;
+    margin-bottom: 40px;
+  }
 }
 
 .hero-slider__container {
@@ -110,6 +158,12 @@
   @media (min-width: $tablet-width) {
     width: 280px;
     margin: 0 auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+    margin: 0;
+    width: 230px;
   }
 }
 
