--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -3,6 +3,9 @@
   display: flex;
   align-items: center;
 
+  @media(min-width: $desktop-width) {
+    width: 882px;
+  }
 }
 
 .main-nav__toggle {
@@ -25,6 +28,11 @@
 
 .main-nav__user-list {
   display: flex;
+
+  @media (min-width:$desktop-width) {
+    margin-left: 60px;
+    column-gap: 20px;
+  }
 }
 
 .main-nav__link {
@@ -32,10 +40,10 @@
   justify-content: center;
   align-items: center;
   margin: auto;
-  width: 60px;
+  min-width: 60px;
   min-height: 60px;
   cursor: pointer;
-
+  box-sizing: border-box;
   background-repeat: no-repeat;
   background-size: 16px 16px;
   background-position: center;
@@ -50,6 +58,28 @@
 
   @media (min-width: $tablet-width) {
     min-height: 80px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-width: 112px;
+    padding: 32px 20px 32px 44px;
+    background-position: left 20px center;
+  }
+}
+
+.main-nav__span {
+  display: none;
+
+  @media (min-width: $desktop-width) {
+    display: block;
+    color: #333333;
+    font-family: "Monserrat", "Arial", sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16px;
+    letter-spacing: 0.24px;
+    text-transform: uppercase;
   }
 }
 
@@ -72,6 +102,7 @@
 
   @media (min-width: $tablet-width) {
     display: flex;
+    flex-wrap: wrap;
     position: static;
   }
 }
