--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -6,6 +6,10 @@
   @media(min-width: $tablet-width) {
     width: 223px;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+  }
 }
 
 .range__input {
@@ -26,6 +30,10 @@
   @media(min-width: $tablet-width) {
     width: 87px;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 134px;
+  }
 }
 
 .range__slider {
@@ -35,6 +43,7 @@
     margin-top: 10px;
     margin-bottom: 30px;
   }
+
 }
 
 .range__dash {
