--- a/source/sass/blocks/wrapper.scss
+++ b/source/sass/blocks/wrapper.scss
@@ -8,4 +8,10 @@
     @media (min-width: $tablet-width) {
         width: 768px;
     }
+
+    @media (min-width: $desktop-width) {
+        width: 1440px;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
 }
