--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -1,10 +1,20 @@
 .footer-nav {
   @media (min-width: $tablet-width) {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 223px 222px 223px;
     column-gap: 30px;
     padding-left: 20px;
     padding-right: 20px;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 318px 318px 318px;
+    padding: 0;
   }
 }
 
@@ -16,8 +26,12 @@
   @media (min-width: $tablet-width) {
     border: none;
     padding: 0;
-    padding-top: 10px;
     width: 222px;
+  }
+  
+  @media (min-width: $desktop-width) {
+    width: 318px;
+    padding-top: 10px;
   }
 }
 
@@ -45,9 +59,15 @@
 .footer-nav__item {
   margin-top: 8px;
   margin-bottom: 8px;
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+    margin-bottom: 4px;
+  }
 }
 
 .footer-nav__link {
+  display: block;
   color: #333333;
   font-size: 12px;
   font-family: "Montserrat", "Arial", sans-serif;
@@ -56,6 +76,12 @@
   line-height: 16px;
   text-transform: uppercase;
   letter-spacing: 0.24px;
+
+  @media (min-width: $desktop-width) {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+
 }
 
 .footer-nav__contacts {
@@ -89,3 +115,5 @@
 .footer-nav__contacts--tel::before {
   background-image: url("/images/icons/stack.svg#phone");
 }
+
+
