--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -14,6 +14,11 @@
   @media (min-width: $tablet-width) {
     gap: 20px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+    margin-top: 80px;
+  }
 }
 
 .social__link {
@@ -42,4 +47,24 @@
 
 .social__logo {
   padding: 0;
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    padding: 0;
+
+    &::after {
+      position: absolute;
+      content: "Интернет-магазин кофейных напитков";
+      color: #333333;
+      font-family: "Monserrat", "Arial", sans-serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px;
+      bottom: -30px;
+      left: 0;
+      width: 318px;
+
+    }
+}
 }
