--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -70,6 +70,20 @@
   &--reset {
     color: #7859CF;
     background-color: #ffffff;
+
+    &:hover,
+    &:focus {
+      color: #ffffff;
+      background-color: #9070EC;
+    }
+
+    &:active {
+      background-color: #593CAC;
+    }
+
+    &:disabled {
+      background-color: #E2E2E2;
+    }
   }
 
   @media (min-width: $desktop-width) {
@@ -150,14 +164,6 @@
 	background: white;
 	transition: .15s;
 }
-// .form__value--checkbox input[type=checkbox] {
-// 	display: block;
-// 	width: 0;
-// 	height: 0;
-// 	position: absolute;
-// 	z-index: -1;
-// 	opacity: 0;
-// }
 
 .form__value--checkbox input[type=checkbox]:not(:disabled):not(:checked):hover + .form__control-switch,
 .form__value--checkbox input[type=checkbox]:not(:disabled):not(:checked):focus + .form__control-switch {
@@ -176,12 +182,6 @@
 .form__input:focus + .form__control-radio {
   border: 2px solid #7859CF;
 }
-
-// .form__input:hover + .form__control-switch,
-// .form__input:focus + .form__control-switch {
-//   box-shadow: inset 0 0 0 2px gold;
-//
-// }
 
 /* Disabled */
 .form__value--checkbox input[type=checkbox]:disabled + .form__control-switch {
