--- a/source/sass/blocks/pagination.scss
+++ b/source/sass/blocks/pagination.scss
@@ -22,6 +22,20 @@
   background-position: center;
   cursor: pointer;
 
+  &:hover,
+  &:focus {
+    color: #ffffff;
+    background-color: #9070EC;
+  }
+
+  &:active {
+    background-color: #593CAC;
+  }
+
+  &:disabled {
+    background-color: #E2E2E2;
+  }
+
   &--next {
     transform: scale(-1, 1);
   }
@@ -64,25 +78,45 @@
   box-sizing: border-box;
   border-radius: 4px;
 
+  &:hover,
+  &:focus {
+    color: #ffffff;
+    background-color: #9070EC;
+  }
+
+  &:active {
+    background-color: #593CAC;
+  }
+
+  &:disabled {
+    background-color: #E2E2E2;
+  }
+
   &--current {
     font-weight: 600;
     color: #333333;
     background-color: transparent;
     cursor: default;
+
+    &:hover,
+    &:focus {
+      color: #333333;
+    background-color: transparent;
+    }
   }
 }
 
 .pagination__button-span {
   display: none;
 
+
   @media (min-width: $tablet-width) {
     display: block;
-    color: #7859CF;
     text-align: center;
     font-family: "Montserrat", "Arial", sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-  }
+}
 }
