--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -4,7 +4,6 @@
   bottom: -100%;
   right: 0;
   min-width: 320px;
-  width: 100%;
   text-align: center;
   background-color: #ffffff;
 
@@ -14,7 +13,7 @@
 
   @media (min-width: $desktop-width) {
     column-gap: 20px;
-    margin-right: 108px;
+    margin-right: auto;
   }
 }
 
