--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -27,23 +27,46 @@
   height: 40px;
   align-items: center;
   justify-content: center;
-  background-repeat: no-repeat;
-  background-size: 20px 20px;
-  background-position: center;
+  mask-size: 20px 20px;
+  mask-position: center;
+  mask-size: 20px 20px;
+  mask-position: center;
+  background-color: #BDBDBD;
+  mask-repeat: no-repeat;
+  border-radius: 50%;
 
   &--vk {
-    background-image: url("/images/icons/stack.svg#vk");
+    mask-image: url("/images/icons/stack.svg#vk");
+
   }
 
   &--pinterest {
-      background-image: url("/images/icons/stack.svg#pinterest");
-      background-size: 22px 22px;
+      mask-image: url("/images/icons/stack.svg#pinterest");
+      mask-size: 22px 22px;
   }
 
   &--ok {
-    background-image: url("/images/icons/stack.svg#ok");
+    mask-image: url("/images/icons/stack.svg#ok");
   }
 }
+
+.social__item {
+  border-radius: 4px;
+}
+
+.social__item:hover,
+.social__item:focus {
+  background-color: #F0EBFF;
+}
+.social__item:active {
+  background-color: #7859CF40;
+}
+
+.social__item:hover .social__link,
+.social__item:hover .social__link {
+  background-color: #7859CF;
+}
+
 
 .social__logo {
   padding: 0;
