--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,8 +1,8 @@
 .form__wrapper {
   @media(min-width: $tablet-width) {
-      display: flex;
-      justify-content: space-between;
-      gap: 30px;
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
   }
 
   @media (min-width: $desktop-width) {
@@ -105,7 +105,8 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
+  line-height: 24px;
+  /* 150% */
 }
 
 .form__input {
@@ -123,7 +124,7 @@
   margin-right: 10px;
 }
 
-.form__input--radio:checked + .form__control-radio {
+.form__input--radio:checked+.form__control-radio {
   border-color: #7859CF;
   box-shadow: inset 0 0 0 2px #fff;
   background-color: #7859CF;
@@ -131,64 +132,67 @@
 
 // Кастомные чексбоксы-переключатели
 .form__value--checkbox {
-	display: inline-block;
-	height: 24px;
-	line-height: 24px;
-	margin-right: 10px;
-	position: relative;
-	vertical-align: middle;
-	font-size: 16px;
+  display: inline-block;
+  height: 24px;
+  line-height: 24px;
+  margin-right: 10px;
+  position: relative;
+  vertical-align: middle;
+  font-size: 16px;
   cursor: pointer;
 }
+
 .form__value--checkbox .form__control-switch {
-	position: relative;
-	display: inline-block;
-	box-sizing: border-box;
-	width: 42px;
-	height: 24px;
-	border-radius: 25%/50%;
-	vertical-align: top;
-	background-color: #BDBDBD;
-	transition: .2s;
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  width: 42px;
+  height: 24px;
+  border-radius: 25%/50%;
+  vertical-align: top;
+  background-color: #BDBDBD;
+  transition: .2s;
   margin-right: 10px;
 }
+
 .form__value--checkbox .form__control-switch:before {
-	content: "";
-	position: absolute;
-	top: 2px;
-	left: 2px;
-	display: inline-block;
-	width: 20px;
-	height: 20px;
-	border-radius: 50%;
-	background: white;
-	transition: .15s;
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: white;
+  transition: .15s;
 }
 
-.form__value--checkbox input[type=checkbox]:not(:disabled):not(:checked):hover + .form__control-switch,
-.form__value--checkbox input[type=checkbox]:not(:disabled):not(:checked):focus + .form__control-switch {
-	box-shadow: inset 0 0 0 2px #9070EC;
+.form__value--checkbox input[type=checkbox]:not(:disabled):not(:checked):hover+.form__control-switch,
+.form__value--checkbox input[type=checkbox]:not(:disabled):not(:checked):focus+.form__control-switch {
+  box-shadow: inset 0 0 0 2px #9070EC;
   background-color: rgba(120, 89, 207, 0.25);
 }
-.form__value--checkbox input[type=checkbox]:checked + .form__control-switch {
-	background-color: #7859CF;
+
+.form__value--checkbox input[type=checkbox]:checked+.form__control-switch {
+  background-color: #7859CF;
 }
-.form__value--checkbox input[type=checkbox]:checked + .form__control-switch:before {
-	transform:translateX(18px);
+
+.form__value--checkbox input[type=checkbox]:checked+.form__control-switch:before {
+  transform: translateX(18px);
 }
 
 /* Focus */
-.form__input:hover + .form__control-radio,
-.form__input:focus + .form__control-radio {
+.form__input:hover+.form__control-radio,
+.form__input:focus+.form__control-radio {
   border: 2px solid #7859CF;
 }
 
 /* Disabled */
-.form__value--checkbox input[type=checkbox]:disabled + .form__control-switch {
+.form__value--checkbox input[type=checkbox]:disabled+.form__control-switch {
   opacity: 30%;
 }
-.form__value--checkbox input[type=checkbox]:disabled + .form__control-switch:before {
-	opacity: 30%;
+
+.form__value--checkbox input[type=checkbox]:disabled+.form__control-switch:before {
+  opacity: 30%;
 }
-
-
